Fixed sizing on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ body {
     -webkit-filter: blur(2px); /* Safari */
     filter: blur(2px);
     transform: scale(1.02);
+    height: 600px;
     max-height: 600px;
     width: 100%;
     object-fit: cover;
@@ -59,6 +60,11 @@ body {
     .carousel-caption img {
         width: 50px;
     }
+
+.blurImage {
+    height: 300px;
+    max-height: 300px;
+}
   }
 
 .topInfo {
